--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
      <div class="col-md-4 ">
        <div class="withdraw status">
         <h5>Withdraw</h5>
-        <h2>$00</h2>
+        <h2>$<span id="withdrawMoney">00</span></h2>
        </div>
      </div>
      <div class="col-md-4 ">
@@ -52,9 +52,9 @@
      <div class="col-md-6">
        <div class="submit-area">
         <h4>Withdraw</h4>
-        <input type="text" class="form-control" placeholder="$ amount you want to withdraw">
+        <input type="text" id="withdrawAmount" class="form-control" placeholder="$ amount you want to withdraw">
         <br>
-        <button class="btn btn-success">Withdraw</button>
+        <button id="withdrawBtn" class="btn btn-success">Withdraw</button>
        </div>
      </div>
    </div>
@@ -71,20 +71,33 @@ loginBtn.addEventListener('click',function(){
 // for deposit
   const depositButton=document.getElementById('depositBtn');
   depositButton.addEventListener('click',function(){
-  const depositAmount=document.getElementById('depositAmount').value;
-  const depositNumber=parseFloat(depositAmount);
+  const depositNumber=getInputNumber('depositAmount');
   getSpanText('depositMoney',depositNumber);
   getSpanText('balanceMoney',depositNumber);
   document.getElementById('depositAmount').value="";
+
+})
+//for withdraw
+const withdrawButton=document.getElementById('withdrawBtn');
+withdrawButton.addEventListener('click',function(){
+ const withdrawNumber=getInputNumber('withdrawAmount');
+ getSpanText('withdrawMoney',withdrawNumber);
+ getSpanText('balanceMoney',-1*withdrawNumber);
+ document.getElementById('withdrawAmount').value="";
+
+})
+function getInputNumber(id){
+  const Amount=document.getElementById(id).value;
+  const Number=parseFloat(Amount);
+  return Number;
+
+}
 function getSpanText(id,depositNumber){
   const current=document.getElementById(id).innerText;
   const currentNumber=parseFloat(current);
   const currentTotalNumber=depositNumber+currentNumber;
   document.getElementById(id).innerText=currentTotalNumber;
-
 }
-
-})
   </script>
 </body>
 </html>
